docs/api/qiskit/0.19/qiskit.circuit.library.C3XGate.mdx
---
title: C3XGate (v0.19)
description: API reference for qiskit.circuit.library.C3XGate in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.C3XGate
---

# C3XGate

<Class id="qiskit.circuit.library.C3XGate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/library/standard_gates/x.py" signature="C3XGate(angle=0.7853981633974483, label=None, ctrl_state=None)" modifiers="class">
  The 3-qubit controlled X gate.

  This implementation is based on Page 17 of \[1].

  **References**

  \[1] Barenco et al., 1995. [https://arxiv.org/pdf/quant-ph/9503016.pdf](https://arxiv.org/pdf/quant-ph/9503016.pdf)

  Create a new 3-qubit controlled X gate.

  **Parameters**

  *   **angle** (*float*) – The angle used in the controlled-U1 gates. An angle of π/4 yields the 3-qubit controlled X gate, an angle of π/8 the 3-qubit controlled sqrt(X) gate.
  *   **label** (*str or None*) – An optional label for the gate \[Default: None]
  *   **ctrl\_state** (*int or str or None*) – control state expressed as integer, string (e.g. ‘110’), or None. If None, use all 1s.

  ## Attributes

  <span id="c3xgate-ctrl-state" />

  ### ctrl\_state

  <Attribute id="qiskit.circuit.library.C3XGate.ctrl_state" attributeTypeHint="int">
    Return the control state of the gate as a decimal integer.

    **Return type**

    `int`
  </Attribute>

  <span id="c3xgate-decompositions" />

  ### decompositions

  <Attribute id="qiskit.circuit.library.C3XGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  <span id="c3xgate-definition" />

  ### definition

  <Attribute id="qiskit.circuit.library.C3XGate.definition" attributeTypeHint="List">
    Return definition in terms of other basic gates. If the gate has open controls, as determined from self.ctrl\_state, the returned definition is conjugated with X without changing the internal \_definition.

    **Return type**

    `List`
  </Attribute>

  <span id="c3xgate-label" />

  ### label

  <Attribute id="qiskit.circuit.library.C3XGate.label" attributeTypeHint="str">
    Return gate label

    **Return type**

    `str`
  </Attribute>

  <span id="c3xgate-params" />

  ### params

  <Attribute id="qiskit.circuit.library.C3XGate.params">
    return instruction params.
  </Attribute>

  ## Methods

  <span id="c3xgate-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.circuit.library.C3XGate.add_decomposition" signature="C3XGate.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="c3xgate-assemble" />

  ### assemble

  <Function id="qiskit.circuit.library.C3XGate.assemble" signature="C3XGate.assemble()">
    Assemble a QasmQobjInstruction

    **Return type**

    [`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")
  </Function>

  <span id="c3xgate-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.C3XGate.broadcast_arguments" signature="C3XGate.broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** (`List`) – List of quantum bit arguments.
    *   **cargs** (`List`) – List of classical bit arguments.

    **Return type**

    `Tuple`\[`List`, `List`]

    **Returns**

    A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="c3xgate-c-if" />

  ### c\_if

  <Function id="qiskit.circuit.library.C3XGate.c_if" signature="C3XGate.c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  <span id="c3xgate-control" />

  ### control

  <Function id="qiskit.circuit.library.C3XGate.control" signature="C3XGate.control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Controlled version of this gate.

    **Parameters**

    *   **num\_ctrl\_qubits** (*int*) – number of control qubits.
    *   **label** (*str or None*) – An optional label for the gate \[Default: None]
    *   **ctrl\_state** (*int or str or None*) – control state expressed as integer, string (e.g. ‘110’), or None. If None, use all 1s.

    **Returns**

    controlled version of this gate.

    **Return type**

    [ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")
  </Function>

  <span id="c3xgate-copy" />

  ### copy

  <Function id="qiskit.circuit.library.C3XGate.copy" signature="C3XGate.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="c3xgate-inverse" />

  ### inverse

  <Function id="qiskit.circuit.library.C3XGate.inverse" signature="C3XGate.inverse()">
    Invert this gate. The C3X is its own inverse.
  </Function>

  <span id="c3xgate-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.circuit.library.C3XGate.is_parameterized" signature="C3XGate.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="c3xgate-mirror" />

  ### mirror

  <Function id="qiskit.circuit.library.C3XGate.mirror" signature="C3XGate.mirror()">
    For a composite instruction, reverse the order of sub-gates.

    This is done by recursively mirroring all sub-instructions. It does not invert any gate.

    **Returns**

    a fresh gate with sub-gates reversed

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="c3xgate-power" />

  ### power

  <Function id="qiskit.circuit.library.C3XGate.power" signature="C3XGate.power(exponent)">
    Creates a unitary gate as gate^exponent.

    **Parameters**

    **exponent** (*float*) – Gate^exponent

    **Returns**

    To which to\_matrix is self.to\_matrix^exponent.

    **Return type**

    [qiskit.extensions.UnitaryGate](qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")

    **Raises**

    **CircuitError** – If Gate is not unitary
  </Function>

  <span id="c3xgate-qasm" />

  ### qasm

  <Function id="qiskit.circuit.library.C3XGate.qasm" signature="C3XGate.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="c3xgate-repeat" />

  ### repeat

  <Function id="qiskit.circuit.library.C3XGate.repeat" signature="C3XGate.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  <span id="c3xgate-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.circuit.library.C3XGate.to_matrix" signature="C3XGate.to_matrix()">
    Return a Numpy.array for the gate unitary matrix.

    **Raises**

    **CircuitError** – If a Gate subclass does not implement this method an exception will be raised when this base class method is called.

    **Return type**

    `ndarray`
  </Function>
</Class>

